src/test/run-pass/simplext-3.rs
fn main() {
  #simplext("trivial", 1*2*4*2*1);
  
  assert(#trivial() == 16);
}
